      the program; look at rsc/compilation.dox for details
    - device_capacity field added to winx_volume_information structure
    - WgxShowWindow and WgxHideWindow definitions added to wgx.h file
    - WgxSetProcessPriority routine added to wgx library


  Version 5.0.7  2012-07-
  ------------------------------------------------------------------------------
    - changed unit suffixes from lower case 'b' to capital 'B',
      this is going conform with the SI units.
      Current scripts will still function, since we ignore character case.
    - the following translations were updated:

      Vietnamese, Polish, Iloko, Portuguese (BR), Norwegian, Slovak,
      Chinese (Simplified), Chinese (Traditional)

    - 


  Version 5.0.6  2012-06-20
  ------------------------------------------------------------------------------
    - GUI debugging output was forced to be saved in the log file
    - added "Debug" item to the help menu
    - added "View change log", "View translation report" and
      "Submit current translation" items to language menu
    - result of the previous operation stays visible for the boot time interface
    - the following translations were updated:

      Arabic, Portuguese, Italian, Spanish (ES), Hebrew, Serbian, Javanese,
      Indonesian (Bahasa Indonesia), Polish, Korean, Filipino (Tagalog),
      Iloko, Chinese (Simplified), Dutch, Portuguese (BR), Danish, Hindi,
      Bulgarian, Russian

    - the following translations were renamed:

      French (FR) to French, Bosanski to Bosnian and Vietnamese (VI) to Vietnamese

    - Internals: winx_to_utf8 routine added to zenwinx library
    - winx_dbg_print routine enhanced: $NS and $LE magic sequences support added
    - udefrag_dbg_print routine added to udefrag library
    - WgxSetDbgPrintHandler routine added to wgx library


  Version 5.0.5  2012-05-05
  ------------------------------------------------------------------------------
    - repair drives action was added to the GUI menu